--- a/.github/workflows/notify-docker.yml
+++ b/.github/workflows/notify-docker.yml
@@ -10,10 +10,15 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Trigger docker repo update
+      - name: Repository Dispatch
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
+          repository: teamvoia/ayon-docker
+          event-type: submodule-updated
+          client-payload: '{"repo": "${{ github.repository }}", "ref": "${{ github.ref }}"}'
+      
+      - name: Summary
         run: |
-          curl -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
-            https://api.github.com/repos/teamvoia/ayon-docker/dispatches \
-            -d '{"event_type":"submodule-updated","client_payload":{"repo":"${{ github.repository }}","ref":"${{ github.ref }}"}}'
+          echo "### 📢 Docker repo notified" >> $GITHUB_STEP_SUMMARY
+          echo "Triggered submodule update in teamvoia/ayon-docker" >> $GITHUB_STEP_SUMMARY
